# bat2exe

./: Cargo.toml  README.md  build.rs  resources.rc  test-gbk.bat  test-utf8.bat
src/: bat_converter.rs  encoding_detector.rs  exe_generator.rs  main.rs
